--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -12,12 +12,14 @@
 
 .nav-con{
   background-color: #ffffff;
-  padding: 0.5rem 1rem !important;
+  padding: 0rem 1rem !important;
 }
 
 .nav-con .menu-item .nav-link{
   margin-right: 2.5rem !important;
   margin-left: 2.5rem !important;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .nav-con .nav-btn{
@@ -30,6 +32,7 @@
   margin-left: 1.2rem;
   padding: 0.8rem 1.2rem !important;
   height: 32px;
+  margin-top: 0.5rem;
 }
 
 .nav-con .get-help-btn{
@@ -41,8 +44,21 @@
   border: 1px solid #F0F4F8;
 }
 
+.active-menu {
+  border-bottom: solid 4px var(--main-primary-color);
+}
+
 @media (min-width: 768px){
   .nav-con{
-    padding: 1.4rem 4rem !important;
+    padding: 0rem 4rem !important;
+  }
+
+  .nav-con .menu-item .nav-link{
+    padding-top: 1.9rem;
+    padding-bottom: 1.9rem;
+  }
+
+  .nav-con .nav-btn {
+    margin-top: 1.4rem;
   }
 }
